--- a/dashboard/src/components/RepositoryCard/RepositoryCard.module.css
+++ b/dashboard/src/components/RepositoryCard/RepositoryCard.module.css
@@ -1,9 +1,12 @@
 .container {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: 140px 260px 1fr;
     margin-top: 50px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
+    border: 1px solid black;
+    background-color: #faf2cd;
 }
 
 .hat {
@@ -11,6 +14,7 @@
     grid-template-rows: repeat(3, 1fr);
     justify-items: center;
     align-items: center;
+    border-bottom: 1px solid black;
 }
 
 .name {
@@ -28,30 +32,47 @@
 
 .profile {
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 500px 500px;
+    border-bottom: 1px solid black;
 }
 
-.photo img {
-    height: 150px;
-    width: 150px;
+.owner {
+    display: grid;
+    justify-items: center;
+    align-content: center;
+}
+
+.owner img {
+    height: 200px;
+    width: 200px;
+}
+
+.nick {
+    font-size: 20px;
 }
 
 .description {
     grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    border: 1px solid black;
+    border-left: 1px solid black;
+    padding: 10px;
 }
 
 .lists {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 500px 500px;
 }
 
 .languages {
-    border: 1px solid black;
+    padding: 10px;
 }
 
 .contributers {
-    border: 1px solid black;
+    border-left: 1px solid black;
+    padding: 10px;
+}
+
+.titul {
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
 }
