--- a/dashboard/src/components/mainPage/MainPage.module.css
+++ b/dashboard/src/components/mainPage/MainPage.module.css
@@ -16,6 +16,14 @@
     height: 24px;
 }
 
+.button {
+	width: 100px;
+    height: 29px;
+	margin-left: 5px;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+
 .list {
     margin-top: 10px;
     margin-bottom: 10px;
